--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.mp4 filter=lfs diff=lfs merge=lfs -text
 video.mp4 filter=lfs diff=lfs merge=lfs -text
+MIDLABEXAM/assets/video.mp4 filter=lfs diff=lfs merge=lfs -text
